@@ -64,6 +64,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* improved error handling of session::listen_on
 	* suppress initial 'completed' announce to trackers added with replace_trackers
 	  after becoming a seed
 	* SOCKS4 fix for trying to connect over IPv6
